# campofacil-api

./: README.md  docker-compose.yaml  docker-compose.yml
app/: .env  README.md  auth.py  database.py  main.py  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: 748711b731e5_create_clients_and_products.py
app/models/: __init__.py  client.py  product.py
app/routes/: auth.py  clientes.py  clients.py  products.py
app/schemas/: __init__.py  client.py  product.py
scripts/keycloak/: .env  README.md  env_vars.py  main.py  requirements.txt
